correct index page, other fixes including removing of API and secrets

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <!-- scripts -->
   <script src="./assets/scripts/config.js"></script>
   <!-- <script src="./assets/scripts/main.js"></script> -->
+
   <script src="./assets/scripts/data_render.js"></script>
   <!-- testing -->
   <!-- <script src="./assets/scripts/testing/api_drafting.js"></script> -->
@@ -79,6 +80,7 @@
   <!-- <script src="./assets/scripts/testing/passing_variables.js"></script> -->
   <!-- <script src="./assets/scripts/testing/saving_objects_local.js"></script> -->
   <!-- <script src="./assets/scripts/testing/remove_correct_item.js"></script> -->
+  <!-- <script src="./assets/scripts/testing/data_render_before_objectArray.js"></script> -->
 </body>
 
 </html>
