bug fixes, css errors, added a png folder to organise images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/png/favicon.ico">
   <link rel="stylesheet" href="assets/css/webfontkit-tagsExtreme/stylesheet.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,800,900">
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
 <body>
   <main class="main">
     <div class="header-landing">
-      <img src="./assets/images/logos/site_logo/music4you_logo_part_one.png" alt="">
+      <img src="./assets/images/logos/site_logo/music4you_logo_part_one.png" alt="music4you - an artist search library and ticket search engine tag line image">
     </div>
     <!-- landing container -->
     <div class="flex-container">
@@ -30,12 +30,14 @@
         </ul>
       </div>
       <div class="btn-div">
+        <a href="./assets/templates/home.html">
         <button id="button" type="button" class="btn btn-custom">
-          <!-- Enter Site, Get Started,  -->
-          <a href="./assets/templates/home.html">Lets Go!</a></button> 
+          LETS GO!
+        </button>
+        </a>
       </div>
     </div>
-    <img src="./assets/images/logos/site_logo/music4you_logo_part_two_tag.png" class="logo" alt="">
+    <img src="./assets/images/logos/site_logo/music4you_logo_part_two_tag.png" class="logo" alt="music4you logo image">
   </main>
   <script src="https://kit.fontawesome.com/6f088b358c.js" crossorigin="anonymous"></script>
 </body>
