landing page is responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,800,900">
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/landing-style.css">
-  <title>Music4you</title>
+  <title>Music4you - Artist Library & Ticket Booking Search Engine</title>
 </head>
 
 <body>
