css overhaul_landingpage

--- a/index.html
+++ b/index.html
@@ -16,33 +16,44 @@
 <body>
   <!-- main -->
   <main class="main">
-    <div class="header-landing">
-      <img src="./assets/images/logos/site_logo/music4you_logo_part_one.png"
-        alt="music4you - an artist search library and ticket search engine tag line image">
-    </div>
-    <!-- landing container -->
-    <div class="flex-container">
-      <h1>your music, <br>right now</h1>
-      <div class="info">
-        <h2>Listen to loads of songs for free</h2>
-        <ul class="list-div">
-          <li><i class="fa-solid fa-record-vinyl"></i> Build and curate a library of your favourite artists</li>
-          <li><i class="fa-solid fa-music"></i> Listen to your artist's playlists & discover similar music</li>
-          <li><i class="fa-regular fa-calendar-check"></i> Find gigs, tour dates & book tickets to see them perform live
-          </li>
-        </ul>
+    <!-- header tagline -->
+    <div class="tagline-top">
+      <div class="container">
+        <div class="header-landing">
+          <img src="./assets/images/logos/site_logo/music4you_logo_part_one.png"
+            alt="music4you - an artist search library and ticket search engine tag line image">
+        </div>
       </div>
-      <!-- CTA btn -->
-      <div class="btn-div">
-        <a href="./assets/templates/home.html">
-          <button id="button" type="button" class="btn btn-custom">
+    </div>
+    <section class="landing-main">
+      <!-- landing container -->
+      <div class="container">
+        <div class="landing-title">
+          <h1>your music, <br>right now</h1>
+        </div>
+        <div class="info">
+          <h2>Listen to loads of songs for free</h2>
+          <ul class="list-div">
+            <li><i class="fa-solid fa-record-vinyl"></i> Build and curate a library of your favourite artists</li>
+            <li><i class="fa-solid fa-music"></i> Listen to your artist's playlists & discover similar music</li>
+            <li><i class="fa-regular fa-calendar-check"></i> Find gigs, tour dates & book tickets to see them perform</li>
+          </ul>
+        </div>
+        <!-- CTA btn -->
+        <div class="btn-div">
+          <a class="btn btn-lg btn-custom" href="./assets/templates/home.html" role="button">
             LETS GO!
-          </button>
-        </a>
+          </a>
+        </div>
+      </div>
+    </section>
+    <div class="logo-bottom">
+      <div class="container">
+        <!-- site logo -->
+        <img src="./assets/images/logos/site_logo/music4you_logo_part_two_tag.png" class="logo"
+          alt="music4you logo image">
       </div>
     </div>
-    <!-- site logo -->
-    <img src="./assets/images/logos/site_logo/music4you_logo_part_two_tag.png" class="logo" alt="music4you logo image">
   </main>
   <script src="https://kit.fontawesome.com/6f088b358c.js" crossorigin="anonymous"></script>
 </body>
