a lot of CSS fixes and responsive edits

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="./assets/images/png/favicon.ico">
   <link rel="stylesheet" href="assets/css/webfontkit-tagsExtreme/stylesheet.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,800,900">
+  <script src="https://kit.fontawesome.com/6f088b358c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/landing-style.css">
   <title>Music4you - Artist Library & Ticket Booking Search Engine</title>
